2013-11-25 Siraset Jirapatchandej <siraset@proteus-tech.com>
 Merge html response handler from nattakit
 Merge xml response handler chirapat

2013-11-20  Chirapat Harigulrak <chirapat@proteus-tech.com>
  Create xml response handler

2013-11-12  Kirit Saelensminde  <kirit@felspar.com>
 Django applicatoins that are imported on the server side are now able to take a configuration that appears when the service URL is fetched.

2013-10-31  Kirit Saelensminde  <kirit@felspar.com>
 Allow checking if the user making a request has a given permission.

2013-10-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow us to set up a POST expectation, but not test on the post data itself by setting the expected data to None.

2013-09-24  Kirit Saelensminde  <kirit@felspar.com>
 The decorator `slumber.connector.ua.for_user` now copies the wrapped function name so that it can be used for tests etc. where the original function name is still needed.

2013-09-18  Chirapat Harigulrak  <chirapat@proteus-tech.com>
 Make the create operation work for models who don't have a primary key of a numeric sequence.

2013-07-11  Kirit Saelensminde  <kirit@felspar.com>
 UTF-7 encode the user name in the Authorization header and in the X-FOST-User header.
 Allow for Unicode data in user names and passwords when remote authenticating.

2013-06-04  Kirit Saelensminde  <kirit@felspar.com>
 Fixed up some NULL handling problems for the database fields on RemoteForeignKey thanks to Jsaytoe.

2013-04-18  Kirit Saelensminde  <kirit@felspar.com>
 Added in a Django 1.5 test project and made suitable changes to the code to account for it.
 Add a South introspection rule for the custom remote foreign key field.

2013-02-14  Kirit Saelensminde  <kirit@felspar.com>
 Fixed a bug in the caching code that meant that the cache never had any data added to it.