@@ -40,7 +40,7 @@ disable=I0011, R0903, W0142, W0212
 
 # Set the output format. Available formats are text, parseable, colorized, msvs
 # (visual studio) and html
-output-format=text
+output-format=colorized
 
 # Include message's id in output
 include-ids=yes
