@@ -16,7 +16,7 @@ echo Django 1.3
 check_worked python -tt manage.py test slumber_examples
 cd ../..
 
-check_worked pylint --rcfile=pylintrc --output-format=colorized slumber
+check_worked pylint --rcfile=pylintrc slumber
 
 # workon slumber1-3_psycopg2-4-1
 # cd ./test-projects/django1_3_psycopg2_4_1
