@@ -1,8 +1,11 @@
-2013-11-25 Siraset Jirapatchandej <siraset@proteus-tech.com>
+2013-11-26  Kirit Saelensminde  <kirit@felspar.com>
+ Changed the way that the URLs are configured to be compatible with Django 1.6.
+
+2013-11-25  Siraset Jirapatchandej  <siraset@proteus-tech.com>
  Merge html response handler from nattakit
  Merge xml response handler chirapat
 
-2013-11-20  Chirapat Harigulrak <chirapat@proteus-tech.com>
+2013-11-20  Chirapat Harigulrak  <chirapat@proteus-tech.com>
   Create xml response handler
 
 2013-11-12  Kirit Saelensminde  <kirit@felspar.com>
